# TrtDnnSplitting

./: .gitignore  INSTALL.md  README.md  requirements.txt  run_tests.sh
configs/: split_point_policies.json
cpp_runtime/: CMakeLists.txt
cpp_runtime/include/: buffer_pool.hpp  chunk_pipeline.hpp  timing.hpp  trt_engine.hpp
cpp_runtime/src/: buffer_pool.cpp  chunk_pipeline.cpp  main_table4.cpp  trt_engine.cpp
docs/: E2E_ARCHITECTURE.md  EXPERIMENTS.md  TROUBLESHOOTING.md  USER_GUIDE.md  max_wcet_reprofile_and_vit_run_tests_report.md  metadata_only_live_candidate_space_report.md  report_dnn_utilization_taskgen_implementation_ko.md  report_dnn_utilization_taskgen_refactor_plan_ko.md  report_measured_k_split_cache_ko.md  report_measured_k_split_search_ko.md  report_prev_sim_vs_trt_schedulability_gap_ko.md  report_single_cpu_uni_offload_anomaly_ko.md  report_single_cpu_uni_ss_tolerance_recheck_ko.md  report_taskgen_range_k1_fix_ko.md  report_trt_uni_ss_conversion_alignment_ko.md  ss_tol_fb_early_stop_counter_report_ko.md
prev/: analysis.py
results/: base_profile_consistency_fix_report.md  cache_coverage_diagnostic_fix_report.md  cache_interval_inspection_report.md  cache_only_interval_coverage_report.md  export_final_repo_report.md  fig4_k1_semantics_diagnosis_report.md  fig5_k1_cache_and_fig4_diagnosis_report.md  final_validation_report.md  fix_missing_critical_split_and_base_profile_report.md  full_fig4_matrix_report.md  live_cache_artifact_diagnosis.md  live_interval_cache_scalability_report.md
scripts/: 10_inspect_single_taskset.py  15_compare_k1_timing_semantics.py  20_preflight_design.py  21_profile_base_chunks.py  22_clean_generated_artifacts.py  23_inspect_cache_coverage.py  24_backfill_interval_timings.py  25_profile_missing_masks.py  31_plot_fig4.py  (+9 more)
(+60 files in other folders)
